----------
v7.0.0-git
----------

[mms] Remove mailbox from polled list when unsubscribing from it.
[mms] Allow remote account passwords to be saved encrypted in user's
      preferences (Request #13168).
[mms] Send IMP MUA information to IMAP servers that support the ID extension.
[mms] Send S/MIME encrypted data to multiple recipients in a single outgoing
      message.
[mms] Sent-mail maillog entries are now linked to a viewable representation of
      the sent message, if it still exists on the server.
[mms] Store message ID of the sent message when saving maillog history.
[mms] Add backend configuration option to use body structure data to more
      accurately determine whether a message contains attachments.
[jan] Show warning on S/MIME page if personal certificate has expired.
[mjr] Improve support for vTodo iTip handling.
[mms] Add resent information to message header display.
[mms] Added an option to the mailboxList API call to force inclusion of
      unsubscribed mailboxes.
[mms] Asynchronously load the mailbox list on the advanced search page.
[mms] Automatically try to rotate embedded inline images when displaying a
      message.
[mms] Add ability to add email groups to the address book.
[mms] Improved contacts loading - all contacts are never shown by default, but
      provide simple method for user to load all contacts.
[mms] Add dynamically updating relative time display for messages in dynamic
      view.
[mms] Add Purge Deleted button in smartmobile view (Request #13155).
[mms] Improved display of attachments and message log information in dynamic
      view.
[mms] IMP no longer uses MDN status stored in the maillog backend by default.
[mms] Add ability to download individual files from within a .tgz attachment.
[mms] Improved display of contents of ZIP attachments.
[mms] Contacts popup now does address search dynamically, without the need to
      reload the page.
[mms] Remove 'mailboxarray' hook.
[mms] Remove 'display_folder' hook.