@@ -2,6 +2,7 @@
 v7.0.0-git
 ----------
 
+[mms] Report multiple spam/innocent messages in a single digest.
 [mms] Remove mailbox from polled list when unsubscribing from it.
 [mms] Allow remote account passwords to be saved encrypted in user's
       preferences (Request #13168).
